--- a/sites/all/libraries/PHPExcel/changelog.txt
+++ b/sites/all/libraries/PHPExcel/changelog.txt
@@ -19,7 +19,7 @@
 *
 * @copyright  Copyright (c) 2006 - 2014 PHPExcel (http://www.codeplex.com/PHPExcel)
 * @license    http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt    LGPL
-* @version    ##VERSION##, ##DATE##
+* @version    1.8.1
 **************************************************************************************
 
 
